syntax = "proto3";
option java_multiple_files=true;
package ba.unsa.etf.nwt.system_events_service.grpc;

import "google/protobuf/timestamp.proto";

message ActionsRequest {
  google.protobuf.Timestamp timestamp = 1;
  //  string timestamp = 1;
  string service = 2;
  string actionType = 3;
  string resourceName = 4;
  string responseType = 5;
  string username = 6;
}

message ActionsResponse {
  string status = 1;
}

service ActionsService {
  rpc save(ActionsRequest) returns (ActionsResponse);
}